k8s/argocd/bootstrap/core/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-strip
  namespace: argocd
spec:
  stripPrefix:
    prefixes:
      - /argocd
