k8s/argocd/bootstrap/core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: argocd-strip-argocd@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: glumserver.localdomain
      http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
